agregué algunas cosas

--- a/Prueba.html
+++ b/Prueba.html
@@ -10,6 +10,12 @@
     <h2>¡Hola, Mundo!</h2>
     <h3>¡Hola, Mundo!</h3>
     <h4>¡Hola, Mundo!</h4>
+    <p>
+        <em>El dinero</em> es importante pero <strong>la salud</strong> lo es más.
+    </p>
+    <p>Mi gato es <strong>muy</strong> gruñón.</p>
     <p>Este es mi primer archivo HTML en el repositorio.</p>
-</body>
+    <img 
+    src="https://images.unsplash.com/photo-1516110833967-0b5716ca1387?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" 
+    alt="robot tocando el piano" />
 </html>
