ajuste en pagina acerca de mi

--- a/pagina del curso/paginacurso.html
+++ b/pagina del curso/paginacurso.html
@@ -10,7 +10,7 @@
     <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="300">
     <ul>
         <li><a href="https://www.instagram.com/___joelr/?hl=es-la">Mi instragram</a></li>
-        <li></li><a href="acerca.html">Acercsa de mí</a></li>
+        <li><a href="acerca.html">Acerca de mí</a></li>
         <li><a href="https://www.behance.net/joelromero">Mi portfolio</a></li>
     </ul>
     <h2>Acerca de mi</h2>
