creacion de paginas

--- a/pagina del curso/acerca.html
+++ b/pagina del curso/acerca.html
@@ -8,27 +8,17 @@
 <body>
      <main>
         <header>
-            <h1>Menú</h1>
+            <h1>Joel Romero</h1>
             <nav>
                 <ul>
-                    <li><a href="paginacurso.html">Inicio</a></li>
-                    <li><a href="https://wa.me/5491123456789" target="_blank">Contacto WhatsApp</a></li>
+                    <li><a href="inicio.html">Inicio</a></li>
+                    <li><a href="experiencia.html">Experiencia</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </header>
-        <section>
-        
-            <h2>Sobre mí</h2>
-            <p>Hola, soy <strong>Joel</strong>. Soy diseñador y fotógrafo, me gusta la música y la vida en la naturaleza.</p>
-            <h3>Algunos datos sobre mí</h3>
-            <ul>
-                <li><a>🎸 Toco la guitarra y escribir canciones</a></li>
-                <li><a>📸 Sacar fotos</a></li>
-                <li><a>✍️ Escribir</a></li>
-            </ul></section>
-        <h2>Mi objetivo</h2>
-        <p>Aprender lo necesario para hacer una página web al finalizar el curso.</p>
-        </ul>
+        <h1>Acerca de mí</h1>
+        <p>Soy diseñador especializado en branding, fotógrafo y comunicador con más de diez años de experiencia en la construcción de marcas. A través de mi agencia, Arbor, guio a empresas y emprendedores en su evolución, combinando identidad visual, desarrollo organizacional e innovación. Además, estoy en constante aprendizaje en marketing para potenciar mis proyectos. Apasionado por la música y la escritura, encuentro en la creatividad una forma de expresión y transformación.</p>
     </main>
     <footer>
         <p>&copy; 2025 Joel Romero. Mi página personal.</p>
