--- a/pagina del curso/inicio.html
+++ b/pagina del curso/inicio.html
@@ -6,17 +6,18 @@
     <title>Mi Archivo HTML</title>
 </head>
 <body>
-    <h1>Mi página Personal</h1>
+    <h1>Joel Romero</h1>
+    <h2>Diseñador y fotógrafo</h2>
+    <p>Trabajo desde hace 10 años en la construcción de marcas gráficas y comunicación para empresas y negocios.</p>
     <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="300">
     <ul>
-        <li><a href="https://www.instagram.com/___joelr/?hl=es-la">Mi instragram</a></li>
         <li><a href="acerca.html">Acerca de mí</a></li>
-        <li><a href="https://www.behance.net/joelromero">Mi portfolio</a></li>
+        <li><a href="experiencia.html">Experiencia</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
     </ul>
-    <h2>Acerca de mi</h2>
-    <p>Hola, soy <strong>Joel</strong>. Y estoy aprendiendo a usar HTML.</p>
-    <h2>Contacto</h2>
-    <p>Puedes contactarme por correo electrónico <a href="mailto:joelromero336@gmail.com">joelromero336@gmail.com</a></p>
+    <a href="https://drive.google.com/uc?export=download&id=1DoyN-pflq2csuBR1SZRXMMWpzdrmnC60">
+        <button>Descargar CV</button>
+    </a>
     <footer>
         <p>&copy; 2025 Joel Romero. Mi página personal.</p>
     </footer>
