modificaciones de css

--- a/pagina del curso/acerca.html
+++ b/pagina del curso/acerca.html
@@ -4,22 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de mí</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-     <main>
+    <Main>
         <header>
-            <h1>Joel Romero</h1>
-            <nav>
-                <ul>
-                    <li><a href="inicio.html">Inicio</a></li>
-                    <li><a href="experiencia.html">Experiencia</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
+            <header>
+                <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="300">
+                <h1>Joel Romero</h1>
+                <nav>
+                    <ul>
+                        <li><a href="inicio.html">Inicio</a></li>
+                        <li><a href="experiencia.html">Experiencia</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
+            </header>
         </header>
-        <h1>Acerca de mí</h1>
-        <p>Soy diseñador especializado en branding, fotógrafo y comunicador con más de diez años de experiencia en la construcción de marcas. A través de mi agencia, Arbor, guio a empresas y emprendedores en su evolución, combinando identidad visual, desarrollo organizacional e innovación. Además, estoy en constante aprendizaje en marketing para potenciar mis proyectos. Apasionado por la música y la escritura, encuentro en la creatividad una forma de expresión y transformación.</p>
-    </main>
+    </Main>
+    <h1>Acerca de mí</h1>
+    <p>Soy diseñador especializado en branding, fotógrafo y comunicador con más de diez años de experiencia en la construcción de marcas. A través de mi agencia, Arbor, guio a empresas y emprendedores en su evolución, combinando identidad visual, desarrollo organizacional e innovación. Además, estoy en constante aprendizaje en marketing para potenciar mis proyectos. Apasionado por la música y la escritura, encuentro en la creatividad una forma de expresión y transformación.</p>
     <footer>
         <p>&copy; 2025 Joel Romero. Mi página personal.</p>
     </footer>
