--- a/pagina del curso/experiencia.html
+++ b/pagina del curso/experiencia.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiencia</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
      <main>
-        <header>
-            <h1>Joel Romero</h1>
-            <nav>
-                <ul>
-                    <li><a href="inicio.html">Inicio</a></li>
-                    <li><a href="acerca.html">Acerca de mí</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </header>
+        <Main>
+            <header>
+                <header>
+                    <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="300">
+                    <h1>Joel Romero</h1>
+                    <nav>
+                        <ul>
+                            <li><a href="inicio.html">Inicio</a></li>
+                            <li><a href="acerca.html">Acerca de mí</a></li>
+                            <li><a href="contacto.html">Contacto</a></li>
+                        </ul>
+                    </nav>
+                </header>
+            </header>
         <h1>Experiencia</h1>
         <h2>Clientes</h2>
         <h3>Sanatorio Adventista del Plata</h3>
