--- a/pagina del curso/contacto.html
+++ b/pagina del curso/contacto.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-     <main>
+    <Main>
         <header>
-            <h1>Joel Romero</h1>
-            <nav>
-                <ul>
-                    <li><a href="inicio.html">Inicio</a></li>
-                    <li><a href="acerca.html">Acerca de mi</a></li>
-                    <li><a href="experiencia.html">Experiencia</a></li>
-                </ul>
-            </nav>
+            <header>
+                <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="300">
+                <h1>Joel Romero</h1>
+                <nav>
+                    <ul>
+                        <li><a href="inicio.html">Inicio</a></li>
+                        <li><a href="acerca.html">Acerca de mí</a></li>
+                        <li><a href="experiencia.html">Experiencia</a></li>
+                    </ul>
+                </nav>
+            </header>
         </header>
+    </Main>
         <h1>Contacto</h1>
         <ul>
             <li><strong>Email:</strong><a href="mailto:joelromero336@gmail.com">joelromero336@gmail.com</a></li>
