--- a/pagina del curso/inicio.html
+++ b/pagina del curso/inicio.html
@@ -4,17 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Archivo HTML</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/qiq5mln.css">
 </head>
 <body>
-    <h1>Joel Romero</h1>
+    <Main>
+        <header>
+            <header>
+                <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="300">
+                <h1>Joel Romero</h1>
+                <nav>
+                    <ul>
+                        <li><a href="experiencia.html">Experiencia</a></li>
+                        <li><a href="acerca.html">Acerca de mí</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </header>
+    </Main>
     <h2>Diseñador y fotógrafo</h2>
     <p>Trabajo desde hace 10 años en la construcción de marcas gráficas y comunicación para empresas y negocios.</p>
-    <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="300">
-    <ul>
-        <li><a href="acerca.html">Acerca de mí</a></li>
-        <li><a href="experiencia.html">Experiencia</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-    </ul>
     <a href="https://drive.google.com/uc?export=download&id=1DoyN-pflq2csuBR1SZRXMMWpzdrmnC60">
         <button>Descargar CV</button>
     </a>
