--- a/pagina del curso/experiencia.html
+++ b/pagina del curso/experiencia.html
@@ -5,36 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiencia</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/qiq5mln.css">
 </head>
 <body>
-     <main>
-        <Main>
-            <header>
-                <header>
-                    <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="300">
-                    <h1>Joel Romero</h1>
-                    <nav>
-                        <ul>
-                            <li><a href="inicio.html">Inicio</a></li>
-                            <li><a href="acerca.html">Acerca de mí</a></li>
-                            <li><a href="contacto.html">Contacto</a></li>
-                        </ul>
-                    </nav>
-                </header>
-            </header>
-        <h1>Experiencia</h1>
-        <h2>Clientes</h2>
-        <h3>Sanatorio Adventista del Plata</h3>
+    <header>
+        <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="250">
+        <h1>Joel Romero</h1>
+        <div class="Menu-fondo">
+            <nav>
+                <ul>
+                    <li><a href="inicio.html">Inicio</a></li>
+                    <li><a href="experiencia.html">Experiencia</a></li>
+                    <li><a href="acerca.html">Acerca de mí</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <h2>Experiencia</h2>
+        <h3>Clientes</h3>
+
+        <h4>Sanatorio Adventista del Plata</h4>
         <p><strong>2020 - Actualidad</strong></p>
         <p>Diseño gráfico, fotografía y video</p>
         <p>Administración web, equipo de comunicación</p>
-        <h3>Centro de Vida Sana</h3>
+
+        <h4>Centro de Vida Sana</h4>
         <p><strong>2020 - Actualidad</strong></p>
         <p>Diseño gráfico, fotografía y video</p>
-        <p>Campañas de prublicidad, Equipo de comunicación</p>
+        <p>Campañas de publicidad, equipo de comunicación</p>
     </main>
+
     <footer>
         <p>&copy; 2025 Joel Romero. Mi página personal.</p>
     </footer>
 </body>
-</html
+</html>
