--- a/pagina del curso/acerca.html
+++ b/pagina del curso/acerca.html
@@ -5,27 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de mí</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/qiq5mln.css">
 </head>
 <body>
-    <Main>
-        <header>
-            <header>
-                <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="300">
-                <h1>Joel Romero</h1>
-                <nav>
-                    <ul>
-                        <li><a href="inicio.html">Inicio</a></li>
-                        <li><a href="experiencia.html">Experiencia</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
-                    </ul>
-                </nav>
-            </header>
-        </header>
-    </Main>
-    <h1>Acerca de mí</h1>
-    <p>Soy diseñador especializado en branding, fotógrafo y comunicador con más de diez años de experiencia en la construcción de marcas. A través de mi agencia, Arbor, guio a empresas y emprendedores en su evolución, combinando identidad visual, desarrollo organizacional e innovación. Además, estoy en constante aprendizaje en marketing para potenciar mis proyectos. Apasionado por la música y la escritura, encuentro en la creatividad una forma de expresión y transformación.</p>
+    <header>
+        <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="250">
+        <h1>Joel Romero</h1>
+        <div class="Menu-fondo">
+            <nav>
+                <ul>
+                    <li><a href="inicio.html">Inicio</a></li>
+                    <li><a href="experiencia.html">Experiencia</a></li>
+                    <li><a href="acerca.html">Acerca de mí</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <h2>Acerca de mí</h2>
+        <p>Soy diseñador especializado en branding, fotógrafo y comunicador con más de diez años de experiencia en la construcción de marcas. A través de mi agencia, Arbor, guío a empresas y emprendedores en su evolución, combinando identidad visual, desarrollo organizacional e innovación. Además, estoy en constante aprendizaje en marketing para potenciar mis proyectos. Apasionado por la música y la escritura, encuentro en la creatividad una forma de expresión y transformación.</p>
+    </main>
+
     <footer>
         <p>&copy; 2025 Joel Romero. Mi página personal.</p>
     </footer>
 </body>
-</html
+</html>
