--- a/pagina del curso/contacto.html
+++ b/pagina del curso/contacto.html
@@ -5,29 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/qiq5mln.css">
 </head>
 <body>
-    <Main>
-        <header>
-            <header>
-                <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="300">
-                <h1>Joel Romero</h1>
-                <nav>
-                    <ul>
-                        <li><a href="inicio.html">Inicio</a></li>
-                        <li><a href="acerca.html">Acerca de mí</a></li>
-                        <li><a href="experiencia.html">Experiencia</a></li>
-                    </ul>
-                </nav>
-            </header>
-        </header>
-    </Main>
-        <h1>Contacto</h1>
+    <header>
+        <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="250">
+        <h1>Joel Romero</h1>
+        <div class="Menu-fondo">
+            <nav>
+                <ul>
+                    <li><a href="inicio.html">Inicio</a></li>
+                    <li><a href="experiencia.html">Experiencia</a></li>
+                    <li><a href="acerca.html">Acerca de mí</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <h2>Contacto</h2>
         <ul>
-            <li><strong>Email:</strong><a href="mailto:joelromero336@gmail.com">joelromero336@gmail.com</a></li>
-            <li><strong>teléfono:</strong>342 405 1873</li>
-            <li><strong>Linkeding:</strong><a href="https://www.linkedin.com/in/joel-romero-3b234b243/" target="_blank">Mi perfil</a></li>
+            <li><strong>Email:</strong> <a href="mailto:joelromero336@gmail.com">joelromero336@gmail.com</a></li>
+            <li><strong>Teléfono:</strong> 342 405 1873</li>
+            <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/joel-romero-3b234b243/" target="_blank">Mi perfil</a></li>
         </ul>
-        <footer>
-            <p>&copy; 2025 Joel Romero. Mi página personal.</p>
-        </footer>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Joel Romero. Mi página personal.</p>
+    </footer>
+</body>
+</html>
