--- a/pagina del curso/inicio.html
+++ b/pagina del curso/inicio.html
@@ -8,28 +8,33 @@
     <link rel="stylesheet" href="https://use.typekit.net/qiq5mln.css">
 </head>
 <body>
-    <Main>
-        <header>
-            <header>
-                <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="300">
-                <h1>Joel Romero</h1>
-                <nav>
-                    <ul>
-                        <li><a href="experiencia.html">Experiencia</a></li>
-                        <li><a href="acerca.html">Acerca de mí</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
-                    </ul>
-                </nav>
-            </header>
-        </header>
-    </Main>
-    <h2>Diseñador y fotógrafo</h2>
-    <p>Trabajo desde hace 10 años en la construcción de marcas gráficas y comunicación para empresas y negocios.</p>
-    <a href="https://drive.google.com/uc?export=download&id=1DoyN-pflq2csuBR1SZRXMMWpzdrmnC60">
-        <button>Descargar CV</button>
-    </a>
+
+    <header>
+        <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="250">
+        <h1>Joel Romero</h1>
+        <div class="Menu-fondo">
+            <nav>
+                <ul>
+                    <li><a href="inicio.html">Inicio</a></li>
+                    <li><a href="experiencia.html">Experiencia</a></li>
+                    <li><a href="acerca.html">Acerca de mí</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <h2>Diseñador y fotógrafo</h2>
+        <p>Trabajo desde hace 10 años en la construcción de marcas gráficas y comunicación para empresas y negocios.</p>
+        <a href="https://drive.google.com/uc?export=download&id=1DoyN-pflq2csuBR1SZRXMMWpzdrmnC60">
+            <button>Descargar CV</button>
+        </a>
+    </main>
+
     <footer>
         <p>&copy; 2025 Joel Romero. Mi página personal.</p>
     </footer>
+
 </body>
 </html>
