mejoras en la visual de la web

--- a/pagina del curso/acerca.html
+++ b/pagina del curso/acerca.html
@@ -23,8 +23,36 @@
         </div>
     </header>
     <main>
-        <h2>Acerca de mí</h2>
-        <p>Soy diseñador especializado en branding, fotógrafo y comunicador con más de diez años de experiencia en la construcción de marcas. A través de mi agencia, Arbor, guío a empresas y emprendedores en su evolución, combinando identidad visual, desarrollo organizacional e innovación. Además, estoy en constante aprendizaje en marketing para potenciar mis proyectos. Apasionado por la música y la escritura, encuentro en la creatividad una forma de expresión y transformación.</p>
+        <div>
+            <h2>Acerca de mí</h2>
+            <p class="parrafo-acerca">Soy diseñador especializado en branding, fotógrafo y comunicador con más de diez años de experiencia en la construcción de marcas. A través de mi agencia, Arbor, guío a empresas y emprendedores en su evolución, combinando identidad visual, desarrollo organizacional e innovación. Además, estoy en constante aprendizaje en marketing para potenciar mis proyectos. Apasionado por la música y la escritura, encuentro en la creatividad una forma de expresión y transformación.</p>
+        </div>
+        <div>
+            <h2>Habilidades</h2>
+            <div class="habilidades-wrap">
+                <div class="habilidades-item">
+                    <p class="habilidades-name">Design</p>
+                    <div class="habilidades-barra">
+                        <div class="habilidades-line-gray"></div>
+                        <div class="habilidades-line-gradient" style="--w: 95%;"></div>
+                    </div>
+                </div>
+                <div class="habilidades-item">
+                    <p class="habilidades-name">Photo</p>
+                    <div class="habilidades-barra">
+                        <div class="habilidades-line-gray"></div>
+                        <div class="habilidades-line-gradient" style="--w: 90%;"></div>
+                    </div>
+                </div>
+                <div class="habilidades-item">
+                    <p class="habilidades-name">Video</p>
+                    <div class="habilidades-barra">
+                        <div class="habilidades-line-gray"></div>
+                        <div class="habilidades-line-gradient" style="--w: 80%;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
