--- a/pagina del curso/acerca.html
+++ b/pagina del curso/acerca.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="250">
+        <img src="./img/2-joel.png" alt="Descripción de la imagen" width="250">
         <h1>Joel Romero</h1>
         <div class="Menu-fondo">
             <nav>
