--- a/pagina del curso/contacto.html
+++ b/pagina del curso/contacto.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="250">
+        <img src="./img/2-joel.png" alt="Descripción de la imagen" width="250">
         <h1>Joel Romero</h1>
         <div class="Menu-fondo">
             <nav>
@@ -24,6 +24,9 @@
     </header>
     <main>
         <h2>Contacto</h2>
+        <section>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdnnE9M8hkVh58gmsoqt_XjCGSoUrrW6OmxZCAJSRAt-PTYsg/viewform?embedded=true"  frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+        </section>
         <form class="formulario-contacto">
   
             <label>Nombre</label>
@@ -35,8 +38,8 @@
             <button>Enviar</button>
           
           </form>
-        <ul>
-            <li>Email:<a href="mailto:joelromero336@gmail.com">joelromero336@gmail.com</a></li>
+          <ul class="contacto-info">
+            <li>Email: <a href="mailto:joelromero336@gmail.com">joelromero336@gmail.com</a></li>
             <li>Teléfono: 342 405 1873</li>
             <li>LinkedIn: <a href="https://www.linkedin.com/in/joel-romero-3b234b243/" target="_blank">Mi perfil</a></li>
         </ul>
