--- a/pagina del curso/inicio.html
+++ b/pagina del curso/inicio.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <img src="file:///Users/joelromero/Desktop/2-joel.png" alt="Descripción de la imagen" width="250">
+        <img src="./img/2-joel.png" alt="Descripción de la imagen" width="250">
         <h1>Joel Romero</h1>
         <div class="Menu-fondo">
             <nav>
@@ -35,6 +35,8 @@
     <footer>
         <p>&copy; 2025 Joel Romero. Mi página personal.</p>
     </footer>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
