ultimos ajustes de entrega

--- a/pagina del curso/inicio.html
+++ b/pagina del curso/inicio.html
@@ -26,7 +26,9 @@
 
     <main>
         <h2>Diseñador y fotógrafo</h2>
-        <p>Trabajo desde hace 10 años en la construcción de marcas gráficas y comunicación para empresas y negocios.</p>
+        <section class="Parrafo-home">
+            <p>Trabajo desde hace 10 años en la desarrollando marcas gráficas y construyendo elementos de comunicación para empresas y negocios.</p>
+        </section>
           <a href="https://drive.google.com/uc?export=download&id=1DoyN-pflq2csuBR1SZRXMMWpzdrmnC60">
             <button>Descargar CV</button>
         </a>
