--- a/pagina del curso/acerca.html
+++ b/pagina del curso/acerca.html
@@ -22,12 +22,16 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main class="fade-in delay-2">
         <div>
             <h2>Acerca de mí</h2>
-            <p class="parrafo-acerca">Soy diseñador especializado en branding, fotógrafo y comunicador con más de diez años de experiencia en la construcción de marcas. A través de mi agencia, Arbor, guío a empresas y emprendedores en su evolución, combinando identidad visual, desarrollo organizacional e innovación. Además, estoy en constante aprendizaje en marketing para potenciar mis proyectos. Apasionado por la música y la escritura, encuentro en la creatividad una forma de expresión y transformación.</p>
+            <p class="parrafo-acerca"><p>
+                Hola, soy Joel. Hace más de 10 años trabajo en imagen y comunicación para marcas, empresas y proyectos. Estudié publicidad y marketing, pero fue el diseño lo que realmente me dio una forma de pensar: un enfoque que atraviesa todo lo que hago y moldea mi manera de abordar los desafíos creativos y comunicacionales.<br><br>
+                Con los años sumé herramientas como la fotografía, el video y la animación, que me permiten contar visualmente lo que una marca es, tanto en medios digitales como físicos: redes sociales, sitios web, campañas, cartelería, entre otros.<br><br>
+                Mi objetivo es ayudar a mis clientes a construir marcas sólidas, bien pensadas, que se instalen en la mente del consumidor y potencien el valor de lo que hacen y representan.
+                </p></p>
         </div>
-        <div>
+        <section id="habilidades">
             <h2>Habilidades</h2>
             <div class="habilidades-wrap">
                 <div class="habilidades-item">
@@ -52,11 +56,15 @@
                     </div>
                 </div>
             </div>
+        </section>
         </div>
     </main>
 
-    <footer>
+    <footer class="fade-in delay-3">
         <p>&copy; 2025 Joel Romero. Mi página personal.</p>
     </footer>
+
+    <script src="script.js" defer></script>
+    
 </body>
 </html>
