--- a/pagina del curso/experiencia.html
+++ b/pagina del curso/experiencia.html
@@ -22,7 +22,7 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main class="fade-in delay-2">
         <h2>Experiencia</h2>
         <h3>Clientes</h3>
 
@@ -37,7 +37,7 @@
         <p>Campañas de publicidad, equipo de comunicación</p>
     </main>
 
-    <footer>
+    <footer class="fade-in delay-3">
         <p>&copy; 2025 Joel Romero. Mi página personal.</p>
     </footer>
 </body>
