--- a/pagina del curso/inicio.html
+++ b/pagina del curso/inicio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <header>
+    <header class="fade-in delay-1">
         <img src="./img/2-joel.png" alt="Descripción de la imagen" width="250">
         <h1>Joel Romero</h1>
         <div class="Menu-fondo">
@@ -23,22 +23,22 @@
             </nav>
         </div>
     </header>
-
-    <main>
+    
+    <main class="fade-in delay-2">
         <h2>Diseñador y fotógrafo</h2>
         <section class="Parrafo-home">
-            <p>Trabajo desde hace 10 años en la desarrollando marcas gráficas y construyendo elementos de comunicación para empresas y negocios.</p>
+            <p>Trabajo desde hace 10 años desarrollando marcas gráficas y construyendo elementos de comunicación para empresas y negocios.</p>
         </section>
-          <a href="https://drive.google.com/uc?export=download&id=1DoyN-pflq2csuBR1SZRXMMWpzdrmnC60">
+        <a href="https://drive.google.com/uc?export=download&id=1DoyN-pflq2csuBR1SZRXMMWpzdrmnC60">
             <button>Descargar CV</button>
         </a>
     </main>
-
-    <footer>
+    
+    <footer class="fade-in delay-3">
         <p>&copy; 2025 Joel Romero. Mi página personal.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 
 </body>
 </html>
