--- a/pagina del curso/contacto.html
+++ b/pagina del curso/contacto.html
@@ -22,7 +22,7 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main class="fade-in delay-2">
         <h2>Contacto</h2>
         <section>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdnnE9M8hkVh58gmsoqt_XjCGSoUrrW6OmxZCAJSRAt-PTYsg/viewform?embedded=true"  frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
@@ -34,7 +34,7 @@
         </ul>
     </main>
 
-    <footer>
+    <footer class="fade-in delay-3">
         <p>&copy; 2025 Joel Romero. Mi página personal.</p>
     </footer>
 </body>
