--- a/pagina del curso/acerca.html
+++ b/pagina del curso/acerca.html
@@ -6,6 +6,7 @@
     <title>Acerca de mí</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/qiq5mln.css">
+    <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 <body>
     <header>
@@ -25,11 +26,9 @@
     <main class="fade-in delay-2">
         <div>
             <h2>Acerca de mí</h2>
-            <p class="parrafo-acerca"><p>
-                Hola, soy Joel. Hace más de 10 años trabajo en imagen y comunicación para marcas, empresas y proyectos. Estudié publicidad y marketing, pero fue el diseño lo que realmente me dio una forma de pensar: un enfoque que atraviesa todo lo que hago y moldea mi manera de abordar los desafíos creativos y comunicacionales.<br><br>
+            <p class="parrafo-acerca">Hola, soy Joel. Hace más de 10 años trabajo en imagen y comunicación para marcas, empresas y proyectos. Estudié publicidad y marketing, pero fue el diseño lo que realmente me dio una forma de pensar: un enfoque que atraviesa todo lo que hago y moldea mi manera de abordar los desafíos creativos y comunicacionales.<br><br>
                 Con los años sumé herramientas como la fotografía, el video y la animación, que me permiten contar visualmente lo que una marca es, tanto en medios digitales como físicos: redes sociales, sitios web, campañas, cartelería, entre otros.<br><br>
-                Mi objetivo es ayudar a mis clientes a construir marcas sólidas, bien pensadas, que se instalen en la mente del consumidor y potencien el valor de lo que hacen y representan.
-                </p></p>
+                Mi objetivo es ayudar a mis clientes a construir marcas sólidas, bien pensadas, que se instalen en la mente del consumidor y potencien el valor de lo que hacen y representan.</p>
         </div>
         <section id="habilidades">
             <h2>Habilidades</h2>
