--- a/pagina del curso/inicio.html
+++ b/pagina del curso/inicio.html
@@ -6,6 +6,7 @@
     <title>Joel Romero</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/qiq5mln.css">
+    <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 <body>
 
@@ -25,10 +26,10 @@
     </header>
     
     <main class="fade-in delay-2">
-        <h2>Diseñador y fotógrafo</h2>
+        <h2>Director Creativo</h2>
         <section class="Parrafo-home">
-            <p>Trabajo desde hace 10 años desarrollando marcas gráficas y construyendo elementos de comunicación para empresas y negocios.</p>
-        </section>
+            <p>Acompaño a empresas, negocios y proyectos en la construcción de marcas sólidas, con una visión integral que combina estrategia, comunicación digital y un enfoque centrado en las personas.</p>
+        </section>  
         <a href="https://drive.google.com/uc?export=download&id=1DoyN-pflq2csuBR1SZRXMMWpzdrmnC60">
             <button>Descargar CV</button>
         </a>
