--- a/pagina del curso/contacto.html
+++ b/pagina del curso/contacto.html
@@ -6,6 +6,7 @@
     <title>Contacto</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/qiq5mln.css">
+    <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 <body>
     <header>
