--- a/pagina del curso/acerca.html
+++ b/pagina del curso/acerca.html
@@ -24,36 +24,33 @@
         </div>
     </header>
     <main class="fade-in delay-2">
-        <div>
-            <h2>Acerca de mí</h2>
-            <p class="parrafo-acerca">Hola, soy Joel. Hace más de 10 años trabajo en imagen y comunicación para marcas, empresas y proyectos. Estudié publicidad y marketing, pero fue el diseño lo que realmente me dio una forma de pensar: un enfoque que atraviesa todo lo que hago y moldea mi manera de abordar los desafíos creativos y comunicacionales.<br><br>
-                Con los años sumé herramientas como la fotografía, el video y la animación, que me permiten contar visualmente lo que una marca es, tanto en medios digitales como físicos: redes sociales, sitios web, campañas, cartelería, entre otros.<br><br>
-                Mi objetivo es ayudar a mis clientes a construir marcas sólidas, bien pensadas, que se instalen en la mente del consumidor y potencien el valor de lo que hacen y representan.</p>
-        </div>
         <section id="habilidades">
             <h2>Habilidades</h2>
             <div class="habilidades-wrap">
                 <div class="habilidades-item">
                     <p class="habilidades-name">Design</p>
                     <div class="habilidades-barra">
-                        <div class="habilidades-line-gray"></div>
                         <div class="habilidades-line-gradient" style="--w: 95%;"></div>
                     </div>
                 </div>
                 <div class="habilidades-item">
                     <p class="habilidades-name">Photo</p>
                     <div class="habilidades-barra">
-                        <div class="habilidades-line-gray"></div>
                         <div class="habilidades-line-gradient" style="--w: 90%;"></div>
                     </div>
                 </div>
                 <div class="habilidades-item">
                     <p class="habilidades-name">Video</p>
                     <div class="habilidades-barra">
-                        <div class="habilidades-line-gray"></div>
                         <div class="habilidades-line-gradient" style="--w: 80%;"></div>
                     </div>
                 </div>
+            </div>
+            <div>
+                <h2>Sobre de mí</h2>
+                <p class="parrafo-acerca">Hola, soy Joel. Hace más de 10 años trabajo en imagen y comunicación para marcas, empresas y proyectos. Estudié publicidad y marketing, pero fue el diseño lo que realmente me dio una forma de pensar: un enfoque que atraviesa todo lo que hago y moldea mi manera de abordar los desafíos creativos y comunicacionales.<br><br>
+                    Con los años sumé herramientas como la fotografía, el video y la animación, que me permiten contar visualmente lo que una marca es, tanto en medios digitales como físicos: redes sociales, sitios web, campañas, cartelería, entre otros.<br><br>
+                    Mi objetivo es ayudar a mis clientes a construir marcas sólidas, bien pensadas, que se instalen en la mente del consumidor y potencien el valor de lo que hacen y representan.</p>
             </div>
         </section>
         </div>
